# sqlcx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  (+1 more)
crates/sqlcx/: Cargo.toml
crates/sqlcx-core/: Cargo.toml
crates/sqlcx-core/src/: annotations.rs  cache.rs  config.rs  error.rs  ir.rs  lib.rs  param_naming.rs
crates/sqlcx-core/src/generator/: mod.rs
crates/sqlcx-core/src/generator/go/: database_sql.rs  mod.rs  pgx.rs  structs.rs
crates/sqlcx-core/src/generator/go/common/: codegen.rs  mod.rs  naming.rs
crates/sqlcx-core/src/generator/go/snapshots/: sqlcx_core__generator__go__database_sql__tests__go_database_sql_client.snap  sqlcx_core__generator__go__database_sql__tests__go_database_sql_queries.snap  sqlcx_core__generator__go__database_sql__tests__go_database_sql_sqlite_queries.snap  sqlcx_core__generator__go__pgx__tests__go_pgx_client.snap  sqlcx_core__generator__go__pgx__tests__go_pgx_queries.snap  sqlcx_core__generator__go__structs__tests__go_structs_models.snap
crates/sqlcx-core/src/generator/python/: asyncpg.rs  mod.rs  mysql_connector.rs  psycopg.rs  pydantic.rs  sqlite3_driver.rs
crates/sqlcx-core/src/generator/python/common/: mod.rs  query_fn.rs  sql_escape.rs  types.rs
crates/sqlcx-core/src/generator/python/snapshots/: sqlcx_core__generator__python__asyncpg__tests__asyncpg_client.snap  sqlcx_core__generator__python__asyncpg__tests__asyncpg_queries.snap  sqlcx_core__generator__python__mysql_connector__tests__mysql_connector_client.snap  sqlcx_core__generator__python__mysql_connector__tests__mysql_connector_queries.snap  sqlcx_core__generator__python__psycopg__tests__psycopg_client.snap  sqlcx_core__generator__python__psycopg__tests__psycopg_queries.snap  sqlcx_core__generator__python__sqlite3_driver__tests__sqlite3_client.snap  sqlcx_core__generator__python__sqlite3_driver__tests__sqlite3_queries.snap
crates/sqlcx-core/src/generator/rust_lang/: mod.rs  serde_structs.rs  sqlx_driver.rs  tokio_postgres.rs
crates/sqlcx-core/src/generator/rust_lang/common/: mod.rs  types.rs
crates/sqlcx-core/src/generator/rust_lang/snapshots/: sqlcx_core__generator__rust_lang__serde_structs__tests__serde_structs_schema.snap  sqlcx_core__generator__rust_lang__sqlx_driver__tests__sqlx_client.snap  sqlcx_core__generator__rust_lang__sqlx_driver__tests__sqlx_mysql_queries.snap  sqlcx_core__generator__rust_lang__sqlx_driver__tests__sqlx_queries.snap  sqlcx_core__generator__rust_lang__sqlx_driver__tests__sqlx_sqlite_queries.snap  sqlcx_core__generator__rust_lang__tokio_postgres__tests__tokio_postgres_client.snap  sqlcx_core__generator__rust_lang__tokio_postgres__tests__tokio_postgres_queries.snap
crates/sqlcx-core/src/generator/typescript/: better_sqlite3.rs  bun_sql.rs  mod.rs  mysql2.rs  pg.rs  typebox.rs  zod.rs  zod_v3.rs
crates/sqlcx-core/src/generator/typescript/common/: mod.rs  placeholders.rs  query_fn.rs  sql_escape.rs  types.rs
crates/sqlcx-core/src/generator/typescript/snapshots/: sqlcx_core__generator__typescript__better_sqlite3__tests__better_sqlite3_client.snap  sqlcx_core__generator__typescript__better_sqlite3__tests__better_sqlite3_queries.snap  sqlcx_core__generator__typescript__bun_sql__tests__bun_sql_queries.snap  sqlcx_core__generator__typescript__mysql2__tests__mysql2_client.snap  sqlcx_core__generator__typescript__mysql2__tests__mysql2_queries.snap  sqlcx_core__generator__typescript__pg__tests__pg_client.snap  sqlcx_core__generator__typescript__pg__tests__pg_queries.snap  sqlcx_core__generator__typescript__zod__tests__zod_v4_schema.snap  sqlcx_core__generator__typescript__zod_v3__tests__zod_v3_schema.snap
crates/sqlcx-core/src/migrate/: driver.rs  file.rs  mod.rs  new.rs  pg.rs  runner.rs  state.rs
crates/sqlcx-core/src/parser/: joins.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs
crates/sqlcx-core/tests/: e2e.rs  typecheck.rs  typecheck_go.rs  typecheck_python.rs  typecheck_rust.rs
crates/sqlcx-core/tests/common/: mod.rs
crates/sqlcx-core/tests/snapshots/: e2e__e2e_client.ts.snap  e2e__e2e_src__db__schema.ts.snap  e2e__e2e_users.queries.ts.snap
crates/sqlcx/src/: lib.rs  main.rs  migrate_cmd.rs  pipeline.rs
crates/sqlcx/tests/: cli.rs
docs/: astro.config.mjs  evolvsql.md  package-lock.json  package.json
docs-site/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
scripts/: build.ts
sqlcx-rust/: .gitignore  Cargo.toml
sqlcx-rust/crates/sqlcx-core/: Cargo.toml
sqlcx-rust/crates/sqlcx-core/src/: annotations.rs  cache.rs  config.rs  error.rs  ir.rs  lib.rs  param_naming.rs  utils.rs
sqlcx-rust/crates/sqlcx-core/src/generator/: mod.rs
sqlcx-rust/crates/sqlcx-core/src/generator/go/: database_sql.rs  mod.rs  structs.rs
sqlcx-rust/crates/sqlcx-core/src/generator/python/: mod.rs  pydantic.rs
sqlcx-rust/crates/sqlcx-core/src/generator/python/snapshots/: sqlcx_core__generator__python__pydantic__tests__pydantic_models.snap
sqlcx-rust/crates/sqlcx-core/src/generator/rust_lang/: mod.rs  serde_structs.rs  sqlx_driver.rs
sqlcx-rust/crates/sqlcx-core/src/generator/rust_lang/snapshots/: sqlcx_core__generator__rust_lang__sqlx_driver__tests__sqlx_queries.snap
sqlcx-rust/crates/sqlcx-core/src/generator/typescript/: bun_sql.rs  mod.rs  pg.rs  typebox.rs  zod.rs  zod_v3.rs
sqlcx-rust/crates/sqlcx-core/src/generator/typescript/snapshots/: sqlcx_core__generator__typescript__bun_sql__tests__bun_sql_client.snap  sqlcx_core__generator__typescript__bun_sql__tests__bun_sql_client.snap.new  sqlcx_core__generator__typescript__bun_sql__tests__bun_sql_queries.snap.new  sqlcx_core__generator__typescript__pg__tests__pg_queries.snap  sqlcx_core__generator__typescript__typebox__tests__typebox_schema.snap
sqlcx-rust/crates/sqlcx-core/src/parser/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
sqlcx-rust/crates/sqlcx-core/tests/: e2e.rs  typecheck.rs
sqlcx-rust/crates/sqlcx-core/tests/snapshots/: e2e__e2e_schema.ts.snap.new  e2e__e2e_users.queries.ts.snap
src/: index.ts
(+162 files in other folders)
