[workspace]
members = ["crates/sqlcx-core", "crates/sqlcx"]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/JagritGumber/sqlcx"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
