[workspace]
members = ["crates/sqlcx-core", "crates/sqlcx"]
exclude = ["tests/typecheck-rust"]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/JagritGumber/sqlcx"
readme = "README.md"
homepage = "https://github.com/JagritGumber/sqlcx"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
