[package]
name = "sqlcx-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQL-first cross-language type-safe code generator — core library"

[features]
default = []
migrate = ["dep:postgres"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
schemars = "1"
sqlparser = { version = "0.53", features = ["visitor"] }
sha2 = "0.10"
toml = "0.8"
glob = "0.3"
regex = "1"
postgres = { version = "0.19", optional = true }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
tempfile = "3"
