[package]
name = "sqlcx"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQL-first cross-language type-safe code generator — CLI"

[[bin]]
name = "sqlcx"
path = "src/main.rs"

[features]
default = ["migrate"]
migrate = ["sqlcx-core/migrate"]

[dependencies]
# Both path and version are required: path is used for local dev builds,
# version is used when publishing to crates.io (path is stripped).
sqlcx-core = { path = "../sqlcx-core", version = "0.1.3" }
clap = { version = "4", features = ["derive"] }
glob = "0.3"
schemars = "1"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
